--- a/Itzahak_Rouach_ex1.ipynb
+++ b/Itzahak_Rouach_ex1.ipynb
@@ -39,6 +39,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#https://github.com/ItzhakRouach/Machine-Learning-Ex1\n",
         "\n",
         "from sklearn.datasets import load_breast_cancer\n",
         "\n",
@@ -47,7 +48,7 @@
       "metadata": {
         "id": "QbVFGbTWiI1W"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -104,7 +105,7 @@
         },
         "outputId": "20bdd075-b835-4dd7-c71c-8027e9902698"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -164,7 +165,7 @@
       "metadata": {
         "id": "V8CpCqnGmCg2"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -201,7 +202,7 @@
         },
         "outputId": "a4054bd7-60ac-46e6-d480-ec1e132f3ec7"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -652,7 +653,7 @@
         },
         "outputId": "16aabbe3-fef9-4aec-9007-1fc68fa8dd13"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1104,7 +1105,7 @@
         },
         "outputId": "bfe67af5-ae53-42f5-ae4a-ef600c5883b1"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1656,7 +1657,7 @@
         },
         "outputId": "fd394753-f16c-49c3-f79d-df0717659c5e"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
